Resizing images and adding team photos

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1><img src='/img/logo-white.png' /></h1>
+                <h1><img src='./img/logo-white.png' /></h1>
                 <hr>
-                <p>We're a full stop laundry shop!</p>
+                <p>The Uber of Laundry!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -81,8 +81,13 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">We've got what you need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">
+                      If you're looking for a complete change in the way laundry is done then you've 
+                      come to the right place.  Laundry by Alex provides the complete end to end solution 
+                      for your laundry needs with it's complex algorithms and scientifically proven 
+                      methods. It's easy to use.  <br />No strings attached!
+                    </p>
+                    <a href="#contact" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
@@ -101,30 +106,30 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <i class="fa fa-4x fa-sun-o wow bounceIn text-primary"></i>
+                        <h3>Weather</h3>
+                        <p class="text-muted">Climate based.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <i class="fa fa-4x fa-clock-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Fast Sorting</h3>
+                        <p class="text-muted">Peer Reviewed!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <i class="fa fa-4x fa-bar-chart-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Complex Metrics</h3>
+                        <p class="text-muted">Statistically proven.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Folded with Love</h3>
+                        <p class="text-muted">Artisan folds.</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +140,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="#contact" class="portfolio-box">
                         <img src="img/portfolio/1.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -143,14 +148,14 @@
                                     Storage
                                 </div>
                                 <div class="project-name">
-                                    With Temporary and Permanat storage
+                                    With Temporary and Permanant storage
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="#contact" class="portfolio-box">
                         <img src="img/portfolio/2.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -165,7 +170,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="#contact" class="portfolio-box">
                         <img src="img/portfolio/3.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -180,7 +185,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="#contact" class="portfolio-box">
                         <img src="img/portfolio/4.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -195,7 +200,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="#contact" class="portfolio-box">
                         <img src="img/portfolio/5.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -210,7 +215,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="#contact" class="portfolio-box">
                         <img src="img/portfolio/6.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -228,35 +233,44 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <!-- <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Free Download at Start Bootstrap!</h2>
                 <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Sign up today!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>If you're ready for a complete change in the way laundry is done contact us below to sign up!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="mailto:alex@laundry.press">alex@laundry.press</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <i class="fa fa-users fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="team.html">Meet the Team</a></p>
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="footer">
+      <div class="container-fluid">
+        <div class="row no-gutter">
+          <div class="col-lg-12 col-sm-12">
+            <div class='text-center'>Washed &amp; Folded with Love in Cupertino</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
