all new changes

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#sign-up">Sign Up</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                 <h1><img src='./img/logo-white.png' /></h1>
                 <hr>
                 <p>The Uber of Laundry!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Take us for a Spin</a>
             </div>
         </div>
     </header>
@@ -79,11 +79,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <img src='./img/icon.png' width=100 /> <br /><br />
                     <h2 class="section-heading">We've got what you need!</h2>
                     <hr class="light">
                     <p class="text-faded">
                       If you're looking for a complete change in the way laundry is done then you've 
-                      come to the right place.  Laundry by Alex provides the complete end to end solution 
+                      come to the right place.  Laundry by Alex &copy; provides the complete end to end solution 
                       for your laundry needs with it's complex algorithms and scientifically proven 
                       methods. It's easy to use.  <br />No strings attached!
                     </p>
@@ -108,28 +109,28 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-sun-o wow bounceIn text-primary"></i>
                         <h3>Weather</h3>
-                        <p class="text-muted">Climate based.</p>
+                        <p class="text-muted">Climate based</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-clock-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Fast Sorting</h3>
-                        <p class="text-muted">Peer Reviewed!</p>
+                        <p class="text-muted">Peer Reviewed</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-bar-chart-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Complex Metrics</h3>
-                        <p class="text-muted">Statistically proven.</p>
+                        <p class="text-muted">Statistically proven</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Folded with Love</h3>
-                        <p class="text-muted">Artisan folds.</p>
+                        <p class="text-muted">Artisan fluffs and folds</p>
                     </div>
                 </div>
             </div>
@@ -144,10 +145,10 @@
                         <img src="img/portfolio/1.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Storage
                                 </div>
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     With Temporary and Permanant storage
                                 </div>
                             </div>
@@ -159,10 +160,10 @@
                         <img src="img/portfolio/2.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Sorting
                                 </div>
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     With Preference &amp; Priority
                                 </div>
                             </div>
@@ -174,10 +175,10 @@
                         <img src="img/portfolio/3.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Workers
                                 </div>
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     With Redundency
                                 </div>
                             </div>
@@ -189,10 +190,10 @@
                         <img src="img/portfolio/4.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Weather Monitoring
                                 </div>
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     With Integrated APIs
                                 </div>
                             </div>
@@ -204,10 +205,10 @@
                         <img src="img/portfolio/5.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Archiving
                                 </div>
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     With Condition based Activation
                                 </div>
                             </div>
@@ -219,10 +220,10 @@
                         <img src="img/portfolio/6.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-name">
                                     Documentation
                                 </div>
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     With Data Diagrams
                                 </div>
                             </div>
@@ -233,30 +234,88 @@
         </div>
     </section>
 
-    <!-- <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+    <section class="bg-primary" id="team">
+        <div class="container">
+          <!-- Team Members Row -->
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Meet Our Team</h2>
+                    <hr class="light">
+                </div>
             </div>
+          <div class="row">
+            <div class="col-lg-offset-4 col-lg-4 col-sm-6 text-center">
+                <a href="mailto:alex@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/alex.jpg" alt="">
+                <h3>Alex Haas</a>
+                    <small>Founder</small>
+                </h3>
+                <p>The man with the vision!  Alex enjoys all things that involve meat.</p>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-4 col-sm-6 text-center">
+                  <a href="mailto:alex@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/mirai.jpg" alt="">
+                  <h3>Mirai Akagawa</a>
+                      <small>Chief Design Officer</small>
+                  </h3>
+                  <p>Mirai ensures that everything we do is designed to the highest standard.<br /><br /></p>
+              </div>
+              <div class="col-lg-4 col-sm-6 text-center">
+                  <a href="mailto:alex@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/jesse.jpg" alt="">
+                  <h3>Jesse Badger</a>
+                      <small>Frontend Specialist</small>
+                  </h3>
+                  <p>Jesse brews the coffee and writes the CoffeeScript!  His passion for biking is only exceeded by his love of the color blue.</p>
+              </div>
+              <div class="col-lg-4 col-sm-6 text-center">
+                  <a href="mailto:jonathan@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/jonathan.jpg" alt="">
+                  <h3>Jonathan Gluck</a>
+                      <small>Chief Entertainment Officer</small>
+                  </h3>
+                  <p>Jonathan ensures that unit tests are written and the team is throughly entertained.<br /><br /><br /></p>
+              </div>
+              
+              <div class="col-lg-4 col-sm-6 text-center">
+                  <img class="img-circle img-responsive img-center" src="img/team/jacob.jpg" alt="">
+                  <h3><a href="mailto:jacob@laundry.press">Jacob Hackamack</a>
+                      <small>Quality Assurance</small>
+                  </h3>
+                  <p>Jacob takes QA very seriously, almost as seriously as staying caffeinated.<br /><br /><br /><br /></p>
+              </div>
+              <div class="col-lg-4 col-sm-6 text-center">
+                  <a href="mailto:matthew@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/matthew.jpg" alt="">
+                  <h3>Matthew Smith</a>
+                      <small>Chairman of the Board</small>
+                  </h3>
+                  <p>Our resident bartender and board game master! <br /><br /></p>
+              </div>
+              <div class="col-lg-4 col-sm-6 text-center">
+                  <a href="mailto:jobs@laundry.press"><img class="img-circle img-responsive img-center" src="https://placeholdit.imgix.net/~text?txtsize=80&txt=You&w=400&h=400" alt="">
+                  <h3>You</a>
+                      <small>Your Own Title</small>
+                  </h3>
+                  <p>Join our team <a href="mailto:jobs@laundry.press">Jobs@laundry.press</a></p>
+              </div>
+          </div>
         </div>
-    </aside> -->
+    </section>
 
-    <section id="contact">
+
+    <section id="sign-up">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Sign up today!</h2>
                     <hr class="primary">
-                    <p>If you're ready for a complete change in the way laundry is done contact us below to sign up!</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:alex@laundry.press">alex@laundry.press</a></p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-users fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="team.html">Meet the Team</a></p>
+                    <p>Laundry by Alex is in limited beta until the weather is above the 7 day moving average of 79℉ conditions.  Sign up below to be notified when we move out of beta!</p>
+                    <form role="form" action="http://forbetterweb.us11.list-manage.com/subscribe/post?u=4f751a6c58b225179404715f0&amp;id=18fc72763a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline subscribe-form" target="_blank" novalidate="">
+                      <div class="input-group input-group-lg">
+                        <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address...">
+                        <span class="input-group-btn">
+                          <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-notified">Get notified!</button>
+                        </span>
+                      </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -265,8 +324,11 @@
     <section id="footer">
       <div class="container-fluid">
         <div class="row no-gutter">
-          <div class="col-lg-12 col-sm-12">
+          <hr />
+          <div class="col-lg-12 col-sm-12 text-center">
             <div class='text-center'>Washed &amp; Folded with Love in Cupertino</div>
+            <img src='./img/icon-color.png' />
+            <div class='legal'>This site is a parody</div>
           </div>
         </div>
       </div>
