--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       for your laundry needs with it's complex algorithms and scientifically proven 
                       methods. It's easy to use.  <br />No strings attached!
                     </p>
-                    <a href="#contact" class="btn btn-default btn-xl">Get Started!</a>
+                    <a href="#sign-up" class="btn btn-default btn-xl">Get Notified!</a>
                 </div>
             </div>
         </div>
@@ -254,14 +254,14 @@
           </div>
           <div class="row">
               <div class="col-lg-4 col-sm-6 text-center">
-                  <a href="mailto:alex@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/mirai.jpg" alt="">
+                  <a href="mailto:mirai@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/mirai.jpg" alt="">
                   <h3>Mirai Akagawa</a>
                       <small>Chief Design Officer</small>
                   </h3>
                   <p>Mirai ensures that everything we do is designed to the highest standard.<br /><br /></p>
               </div>
               <div class="col-lg-4 col-sm-6 text-center">
-                  <a href="mailto:alex@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/jesse.jpg" alt="">
+                  <a href="mailto:jesse@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/jesse.jpg" alt="">
                   <h3>Jesse Badger</a>
                       <small>Frontend Specialist</small>
                   </h3>
@@ -290,11 +290,11 @@
                   <p>Our resident bartender and board game master! <br /><br /></p>
               </div>
               <div class="col-lg-4 col-sm-6 text-center">
-                  <a href="mailto:jobs@laundry.press"><img class="img-circle img-responsive img-center" src="https://placeholdit.imgix.net/~text?txtsize=80&txt=You&w=400&h=400" alt="">
+                  <a href="mailto:jobs@laundry.press"><img class="img-circle img-responsive img-center" src="img/team/shirt.jpg" alt="">
                   <h3>You</a>
-                      <small>Your Own Title</small>
+                      <small>Master of Everything</small>
                   </h3>
-                  <p>Join our team <a href="mailto:jobs@laundry.press">Jobs@laundry.press</a></p>
+                  <p>Join our team <a href="mailto:jobs@laundry.press">jobs@laundry.press</a>. <br />Or just <a href='http://www.customink.com/g/qsd0-00ab-b3pz'>Order a Shirt</a></p>
               </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
                     <h2 class="section-heading">Sign up today!</h2>
                     <hr class="primary">
                     <p>Laundry by Alex is in limited beta until the weather is above the 7 day moving average of 79℉ conditions.  Sign up below to be notified when we move out of beta!</p>
-                    <form role="form" action="http://forbetterweb.us11.list-manage.com/subscribe/post?u=4f751a6c58b225179404715f0&amp;id=18fc72763a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline subscribe-form" target="_blank" novalidate="">
+                    <form role="form" action="sign-up.php" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline subscribe-form" novalidate="">
                       <div class="input-group input-group-lg">
                         <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address...">
                         <span class="input-group-btn">
