--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#contact" class="portfolio-box">
+                    <a href="#sign-up" class="portfolio-box">
                         <img src="img/portfolio/1.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -156,7 +156,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#contact" class="portfolio-box">
+                    <a href="#sign-up" class="portfolio-box">
                         <img src="img/portfolio/2.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#contact" class="portfolio-box">
+                    <a href="#sign-up" class="portfolio-box">
                         <img src="img/portfolio/3.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -186,7 +186,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#contact" class="portfolio-box">
+                    <a href="#sign-up" class="portfolio-box">
                         <img src="img/portfolio/4.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -201,7 +201,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#contact" class="portfolio-box">
+                    <a href="#sign-up" class="portfolio-box">
                         <img src="img/portfolio/5.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -216,7 +216,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#contact" class="portfolio-box">
+                    <a href="#sign-up" class="portfolio-box">
                         <img src="img/portfolio/6.jpg" class="img-responsive fit" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -294,7 +294,7 @@
                   <h3>You</a>
                       <small>Master of Everything</small>
                   </h3>
-                  <p>Join our team <a href="mailto:jobs@laundry.press">jobs@laundry.press</a>. <br />Or just <a href='http://www.customink.com/g/qsd0-00ab-b3pz'>Order a Shirt</a></p>
+                  <p>Join our team <a href="mailto:jobs@laundry.press">jobs@laundry.press</a> <br />or <a href='http://www.customink.com/g/qsd0-00ab-b3pz'>Order a Shirt</a></p>
               </div>
           </div>
         </div>
